5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4134/executions/1593_1802.log
== TEST (2019-03-28 10:53:04) 
-- CODE:
vi = float(input("Vida inicial: "))
vi = float(input("Vida final: "))

D1 = int(input("Numero sorteado no dado 1: "))
D2 = int(input("Numero sorteado no dado 2: "))

from math import*

dano = ((sqrt(5*D1)) + (pi**(D2/3))

-- ERROR:
File "XXXX", line 10
    
                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:53:07) 
-- CODE:
vi = float(input("Vida inicial: "))
vi = float(input("Vida final: "))

D1 = int(input("Numero sorteado no dado 1: "))
D2 = int(input("Numero sorteado no dado 2: "))

from math import*

dano = ((sqrt(5*D1)) + (pi**(D2/3))
-- ERROR:
File "XXXX", line 10
    
                                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:53:14) 
-- CODE:
vi = float(input("Vida inicial: "))
vi = float(input("Vida final: "))

D1 = int(input("Numero sorteado no dado 1: "))
D2 = int(input("Numero sorteado no dado 2: "))

from math import*

dano = ((sqrt(5*D1)) + (pi**(D2/3)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    D2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:57:10) 
-- CODE:
vi = float(input("Vida inicial: "))
vi = float(input("Vida final: "))

D1 = int(input("Numero sorteado no dado 1: "))
D2 = int(input("Numero sorteado no dado 2: "))

from math import*

dano = ((sqrt(5*D1)) + (pi**(D2/3)))

print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    D2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:57:49) 
-- CODE:
vi = float(input("Vida inicial: "))
vi = float(input("Vida final: "))

D1 = int(input("Numero sorteado no dado 1: "))
D2 = int(input("Numero sorteado no dado 2: "))

from math import*

dano = (((sqrt(5*D1)) + (pi**(D2/3))))

print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    D2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:58:27) 
-- CODE:
vi = float(input("Vida inicial: "))
vi = float(input("Vida final: "))

D1 = int(input("Numero sorteado no dado 1: "))
D2 = int(input("Numero sorteado no dado 2: "))

from math import*

dano = int((((sqrt(5*D1)) + (pi**(D2/3)))))

print(dano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    D2 = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:00:53) 
-- CODE:
vi = float(input("Vida inicial: "))

D1 = int(input("Numero sorteado no dado 1: "))
D2 = int(input("Numero sorteado no dado 2: "))

from math import*

dano = int((((sqrt(5*D1)) + (pi**(D2/3)))))

eq1 = (vi - dano)

print(eq1)
-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:01:05) 
-- CODE:
vi = float(input("Vida inicial: "))

D1 = int(input("Numero sorteado no dado 1: "))
D2 = int(input("Numero sorteado no dado 2: "))

from math import*

dano = int((((sqrt(5*D1)) + (pi**(D2/3)))))

eq1 = (vi - dano)

print(eq1)
-- EXECUTION TIME:
0.22451
-- TEST CASE 1:
---- input:
200
1
6
---- correct output:
188
---- user output:
188.0
-- TEST CASE 2:
---- input:
300
6
6
---- correct output:
285
---- user output:
285.0
-- TEST CASE 3:
---- input:
500
1
1
---- correct output:
497
---- user output:
497.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:04:18) 
-- CODE:
vi = float(input("Vida inicial: "))

D1 = int(input("Numero sorteado no dado 1: "))
D2 = int(input("Numero sorteado no dado 2: "))

from math import*

dano = int((((sqrt(5*D1)) + (pi**(D2/3)))))

eq1 = (vi - dano)

print(eq1)
-- OUTPUT:
188.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
